fixed all bugs, pre testing

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,6 +1,6 @@
 body {
-    background: #fafafa;
-    color: #333333;
+    background: #deee95;
+    color: #F39580;
     margin-top: 5rem;
   }
   
@@ -9,7 +9,7 @@ body {
   }
   
   .bg-steel {
-    background-color: #5f788a;
+    background-color: #3280b8;
   }
   
   .site-header .navbar-nav .nav-link {
